RESOLVED FIXED127863
IDB: Fully implement IDBKeyData encoding/decoding
https://bugs.webkit.org/show_bug.cgi?id=127863
Summary IDB: Fully implement IDBKeyData encoding/decoding
Brady Eidson
Reported 2014-01-29 15:48:33 PST
IDB: Fully implement IDBKeyData encoding/decoding
Attachments
Patch v1 (9.95 KB, patch)
2014-01-29 15:52 PST, Brady Eidson
ap: review+
Brady Eidson
Comment 1 2014-01-29 15:52:50 PST
Created attachment 222602 [details] Patch v1
WebKit Commit Bot
Comment 2 2014-01-29 15:53:55 PST
Attachment 222602 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/indexeddb/IDBKeyData.cpp:170: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebCore/Modules/indexeddb/IDBKeyData.cpp:197: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 3 2014-01-29 15:57:57 PST
Note You need to log in before you can comment on or make changes to this bug.