Source/WebCore/platform/KeyedCoding.h
@@ -39,6 +39,8 @@ protected:
     virtual ~KeyedDecoder() { }
 
 public:
+    virtual bool decodeBool(const String& key, bool&) = 0;
+    virtual bool decodeDouble(const String& key, double&) = 0;
     virtual bool decodeInt64(const String& key, int64_t&) = 0;
     virtual bool decodeUInt32(const String& key, uint32_t&) = 0;
     virtual bool decodeString(const String& key, String&) = 0;
